# WoW-Logs-Agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TODO.md  architecture.md  package.json  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
prompts/: compare_v1.md  compare_v2.md  compare_v3.md
scripts/: check_credentials.py  run_env.py
src/wowlogs_agent/: __init__.py  __main__.py  cli.py
src/wowlogs_agent/application/: container.py
src/wowlogs_agent/application/use_cases/: __init__.py  compare_logs.py
src/wowlogs_agent/domain/entities/: __init__.py  ability_usage.py  actor.py  combat_event.py  combat_log.py  fight.py
src/wowlogs_agent/infrastructure/: config.py  logging.py
src/wowlogs_agent/presentation/: markdown_report_renderer.py
src/wowlogs_agent/services/: __init__.py  context_builder.py  improvement_analyzer.py  log_comparator.py  timeline_builder.py
tests/: conftest.py  test_cli.py
tests/application/: test_compare_logs_use_case.py
tests/domain/: test_combat_event.py  test_performance_delta.py  test_timeline.py  test_value_objects.py
tests/gateways/: test_anthropic_llm_client.py  test_graphql_client.py  test_graphql_combat_log_repository.py  test_oauth_token_provider.py
tests/gateways/fixtures/: cast_events_page_1.json  cast_events_page_2.json  damage_graph.json
tests/infrastructure/: test_file_prompt_template.py  test_filesystem_response_cache.py  test_filesystem_run_recorder.py
tests/services/: test_context_builder.py  test_log_comparator.py  test_timeline_builder.py
(+23 files in other folders)
