[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wowlogs-agent"
version = "0.1.0"
description = "LLM-powered diff analyzer for WarcraftLogs combat reports."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "WoWLogsAgent" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "structlog>=24.1",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-snapshot>=0.9",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
wowlogs-agent = "wowlogs_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wowlogs_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/wowlogs_agent/cli.py" = ["B008"]  # Typer idiomatically calls typer.Option in defaults.

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]
